--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 # # django>=1.8,<1.9
 # django==1.11
 # django-debug-toolbar==1.5
-# gunicorn==19.4.5
+gunicorn==19.4.5
 # psycopg2==2.7.1
 # whitenoise==3.0
 # django-extensions==1.7.7
