--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,12 +6,12 @@ whitenoise==3.0
 django-extensions==1.7.7
 djangorestframework==3.6.2
 djangorestframework-bulk==0.2.1
-Optional packages which may be used with REST framework.
+# Optional packages which may be used with REST framework.
 markdown===2.6.8
 django-filter===1.0.2
-#documentation
+# documentation
 django_rest_swagger===2.1.2
-#packages for testing
+# packages for testing
 pytest-django==3.1.2
 pytest-cov==2.4.0
 django-cors-headers==2.1.0
